--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "patch-package",
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
@@ -41,6 +42,8 @@
     "events": "^3.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "process": "^0.11.10",
     "react": "^18.1.0",
     "react-native": "0.70.6",
@@ -54,7 +57,6 @@
     "react-native-color-matrix-image-filters": "^6.0.3",
     "react-native-component-inview": "^1.0.2",
     "react-native-compressor": "^1.7.0",
-    "react-native-create-thumbnail": "^1.6.4",
     "react-native-crypto": "^2.2.0",
     "react-native-date-picker": "^4.2.13",
     "react-native-dropdown-picker": "^5.4.6",
@@ -63,7 +65,7 @@
     "react-native-gifted-chat": "^2.1.0",
     "react-native-hooks": "^0.9.0",
     "react-native-image-gallery": "^2.1.5",
-    "react-native-image-picker": "^5.3.1",
+    "react-native-image-picker": "^4.10.3",
     "react-native-keep-awake": "^4.0.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^6.2.0",
@@ -76,7 +78,7 @@
     "react-native-simple-biometrics": "^1.5.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-size-matters": "^0.4.0",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel": "^1.3.1",
     "react-native-svg": "^13.8.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper-flatlist": "^3.2.3",
@@ -94,7 +96,7 @@
     "stream-browserify": "^1.0.0",
     "toggle-switch-react-native": "^3.3.0",
     "url": "~0.10.1",
-    "web3": "^1.8.2"
+    "web3": "^4.1.2"
   },
   "reactNativePermissionsIOS": [
     "AppTrackingTransparency",
